--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "macos-spotify-dbus-bridge"
+name = "spotify-dbus-bridge"
 version = "0.1.0"
 authors = ["Domenico Shura <shura1991@gmail.com>"]
 edition = "2018"
